# parlerStadtparlament

./: .firebaserc  .gitignore  Dockerfile  README.md  README_OpenDataHack.docx  Readme.md  deploy.sh  index.js  package-lock.json  package.json  svelte.config.js
.github/workflows/: firebase-hosting-merge.yml  (+2 more)
analyse/: PROMPT_GPT4.md  README.md
completion/: README.md  main.ipynb  pyproject.toml
completion/input/: Daten_mit_Quartier_ab2016.xlsx
completion/output/: 20130212000000_452.json  20130212000000_49.json  20130319000000_141.json  20130430000000_50.json  20130521000000_531.json  20130611000000_453.json  20130611000000_51.json  20130611000000_52.json  20130702000000_564.json  20130827000000_201.json  20130827000000_202.json  20130827000000_203.json  20130827000000_204.json  20130827000000_721.json  20130827000000_722.json  20130827000000_723.json  20130924000000_318.json  20130924000000_319.json  20130924000000_543.json  20130924000000_544.json  20131029000000_170.json  20131029000000_171.json  20131029000000_172.json  20131029000000_173.json  20220322000000_477.json  20220322000000_478.json  20220322000000_85.json  20220322000000_86.json  20220322000000_87.json  20220322000000_88.json  20220503000000_1043.json  20220503000000_1044.json  20220503000000_1045.json  20220503000000_1046.json  20220503000000_1415.json  20220503000000_1416.json  20220503000000_1805.json  20220503000000_1806.json  20220503000000_21.json  20220503000000_22.json  (+161 more)
webapp/: .dockerignore  README.md  Readme.md  deploy.sh  package-lock.json  package.json  vite.config.js
(+70 files in other folders)
